Added notification in yml

--- a/.github/workflows/AndroidBuilds.yml
+++ b/.github/workflows/AndroidBuilds.yml
@@ -42,4 +42,21 @@ jobs:
           name: AuthLogin.apk
           path: app/build/outputs/apk/debug/app-debug.apk
 
-     
+  notification_job:
+    needs: [ local_test_job, android_test_job, build_job ]
+    name: Notify Workflow Results
+    runs-on: ubuntu-latest
+    steps:
+      - uses: technote-space/workflow-conclusion-action@v1
+      - name: Send mail
+        if: failure()
+        uses: dawidd6/action-send-mail@v2
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          username: ${{ secrets.MAIL_USERNAME }}
+          password: ${{ secrets.MAIL_PASSWORD }}
+          subject: Github Actions Job result
+          body: Build job of ${{github.repository}} completed successfully! The Job worflow ${{ github.workflow }} of ${{ github.repository }} has result of ${{ env.WORKFLOW_CONCLUSION }}
+          to: testuserpoiuy@gmail.com
+          from: From Github Action
